force-app/main/default/objects/Project_Deliverables__c/Project_Deliverables__c.object-meta.xml
<CustomObject>
    <label>Project Deliverable</label>
    <nameField>
        <label>Project Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Deliverables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>