force-app/main/default/objects/Project_Deliverables__c/fields/Assign_to_Current_Owner__c.field-meta.xml
<CustomField>
    <fullName>Assign_to_Current_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assign to Current Owner</label>
    <type>Checkbox</type>
</CustomField>