force-app/main/default/objects/Project_Deliverables__c/fields/Case_Close_Time_Hours__c.field-meta.xml
<CustomField>
    <fullName>Case_Close_Time_Hours__c</fullName>
    <label>Case Close Time Hours</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>