force-app/main/default/objects/Project_Deliverables__c/fields/Case_Queue__c.field-meta.xml
<CustomField>
    <fullName>Case_Queue__c</fullName>
    <label>Case Queue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>