force-app/main/default/objects/Project_Deliverables__c/fields/Case_Upon_Creation__c.field-meta.xml
<CustomField>
    <fullName>Case_Upon_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Upon Creation</label>
    <type>Checkbox</type>
</CustomField>