force-app/main/default/objects/Project_Deliverables__c/fields/Case_User__c.field-meta.xml
<CustomField>
    <fullName>Case_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Deliverables1</relationshipName>
    <type>Lookup</type>
</CustomField>