force-app/main/default/objects/Project_Deliverables__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1099</fullName>
                <isActive>false</isActive>
                <label>1099</label>
            </value>
            <value>
                <fullName>1099 Corrections</fullName>
                <isActive>false</isActive>
                <label>1099 Corrections</label>
            </value>
            <value>
                <fullName>2FA</fullName>
                <isActive>false</isActive>
                <label>2FA</label>
            </value>
            <value>
                <fullName>3(16)</fullName>
                <isActive>false</isActive>
                <label>3(16)</label>
            </value>
            <value>
                <fullName>402(g)</fullName>
                <isActive>false</isActive>
                <label>402(g)</label>
            </value>
            <value>
                <fullName>5500</fullName>
            </value>
            <value>
                <fullName>Abandoned Plan Review</fullName>
                <isActive>false</isActive>
                <label>Abandoned Plan Review</label>
            </value>
            <value>
                <fullName>Account/Contact Information Change</fullName>
                <isActive>false</isActive>
                <label>Account/Contact Information Change</label>
            </value>
            <value>
                <fullName>Account Setup/Update</fullName>
                <isActive>false</isActive>
                <label>Account Setup/Update</label>
            </value>
            <value>
                <fullName>ACH</fullName>
                <isActive>false</isActive>
                <label>ACH</label>
            </value>
            <value>
                <fullName>Acquisition Merger Survey</fullName>
                <isActive>false</isActive>
                <label>Acquisition Merger Survey</label>
            </value>
            <value>
                <fullName>Add/Remove User</fullName>
                <isActive>false</isActive>
                <label>Add/Remove User</label>
            </value>
            <value>
                <fullName>Address Change</fullName>
                <isActive>false</isActive>
                <label>Address Change</label>
            </value>
            <value>
                <fullName>Address Look-Up</fullName>
                <isActive>false</isActive>
                <label>Address Look-Up</label>
            </value>
            <value>
                <fullName>Adjustments</fullName>
                <isActive>false</isActive>
                <label>Adjustments</label>
            </value>
            <value>
                <fullName>Administrative Requests</fullName>
                <isActive>false</isActive>
                <label>Administrative Requests</label>
            </value>
            <value>
                <fullName>ADP/ACP Annual Testing</fullName>
                <isActive>false</isActive>
                <label>ADP/ACP Annual Testing</label>
            </value>
            <value>
                <fullName>ADP ACP Refund</fullName>
                <isActive>false</isActive>
                <label>ADP ACP Refund</label>
            </value>
            <value>
                <fullName>Advisor</fullName>
                <isActive>false</isActive>
                <label>Advisor</label>
            </value>
            <value>
                <fullName>Advisor Payments</fullName>
                <isActive>false</isActive>
                <label>Advisor Payments</label>
            </value>
            <value>
                <fullName>Advisor set up</fullName>
                <isActive>false</isActive>
                <label>Advisor set up</label>
            </value>
            <value>
                <fullName>Amending plan</fullName>
                <isActive>false</isActive>
                <label>Amending plan</label>
            </value>
            <value>
                <fullName>Amendments</fullName>
                <isActive>false</isActive>
                <label>Amendments</label>
            </value>
            <value>
                <fullName>Ancillary Billing</fullName>
                <isActive>false</isActive>
                <label>Ancillary Billing</label>
            </value>
            <value>
                <fullName>Annual Compliance Testing</fullName>
                <isActive>false</isActive>
                <label>Annual Compliance Testing</label>
            </value>
            <value>
                <fullName>AP Invoices &amp; Inquiries</fullName>
                <isActive>false</isActive>
                <label>AP Invoices &amp; Inquiries</label>
            </value>
            <value>
                <fullName>ASC Updates</fullName>
                <isActive>false</isActive>
                <label>ASC Updates</label>
            </value>
            <value>
                <fullName>Audit</fullName>
                <isActive>false</isActive>
                <label>Audit</label>
            </value>
            <value>
                <fullName>Audit Research/Confirmations</fullName>
                <isActive>false</isActive>
                <label>Audit Research/Confirmations</label>
            </value>
            <value>
                <fullName>Auto Enroll</fullName>
                <isActive>false</isActive>
                <label>Auto Enroll</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>