force-app/main/default/objects/Project_Deliverables__c/fields/Controlling_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Date_Field__c</fullName>
    <label>Controlling Date Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created Date</fullName>
            </value>
            <value>
                <fullName>Blackout Start Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>