force-app/main/default/objects/Project_Deliverables__c/fields/Creation_Point__c.field-meta.xml
<CustomField>
    <fullName>Creation_Point__c</fullName>
    <label>Creation Point</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created Date</fullName>
            </value>
            <value>
                <fullName>Save Attempts Exhausted</fullName>
            </value>
            <value>
                <fullName>Source Mapping Received</fullName>
            </value>
            <value>
                <fullName>Kotapay Client Signed</fullName>
            </value>
            <value>
                <fullName>Assets Received</fullName>
            </value>
            <value>
                <fullName>Conversion Assets Posted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>