force-app/main/default/objects/Project_Deliverables__c/fields/Expected_Start_Days_from_Creation__c.field-meta.xml
<CustomField>
    <fullName>Expected_Start_Days_from_Creation__c</fullName>
    <label>Expected Start (Days from Creation)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>