force-app/main/default/objects/Project_Deliverables__c/fields/Fields_Stamped_Upon_Completion__c.field-meta.xml
<CustomField>
    <fullName>Fields_Stamped_Upon_Completion__c</fullName>
    <label>Fields Stamped Upon Completion</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Koncierge_Initial_Call__c</fullName>
                <label>(K)oncierge Initial Call</label>
            </value>
            <value>
                <fullName>Koncierge_QA_Check__c</fullName>
                <label>(K)oncierge QA Check</label>
            </value>
            <value>
                <fullName>Koncierge_Survey_Calendly_Email__c</fullName>
                <label>(K)oncierge Survey Calendly Email</label>
            </value>
            <value>
                <fullName>Koncierge_Training_Call__c</fullName>
                <label>(K)oncierge Training Call</label>
            </value>
            <value>
                <fullName>X1st_Payroll_Date__c</fullName>
                <label>1st Payroll Date</label>
            </value>
            <value>
                <fullName>X1st_Payroll_Funded__c</fullName>
                <label>1st Payroll Funded</label>
            </value>
            <value>
                <fullName>X1st_Payroll_Funded_Date__c</fullName>
                <label>1st Payroll Funded Date</label>
            </value>
            <value>
                <fullName>X1st_Payroll_Processed__c</fullName>
                <label>1st Payroll Processed</label>
            </value>
            <value>
                <fullName>X1st_Payroll_Uploaded__c</fullName>
                <label>1st Payroll Uploaded</label>
            </value>
            <value>
                <fullName>X360_Attribute_turned_on__c</fullName>
                <label>360 Attribute turned on</label>
            </value>
            <value>
                <fullName>Account_Application_Sent_to_Custodian__c</fullName>
                <label>Account Application Sent to Custodian</label>
            </value>
            <value>
                <fullName>Activated_in_PRKS__c</fullName>
                <label>Activated in PRKS</label>
            </value>
            <value>
                <fullName>Added_Payroll_Vendor_to_Paradigm__c</fullName>
                <label>Added Payroll Vendor to Paradigm</label>
            </value>
            <value>
                <fullName>Add_Payroll__c</fullName>
                <label>Add Payroll</label>
            </value>
            <value>
                <fullName>Assets_Received__c</fullName>
                <label>Assets Received</label>
            </value>
            <value>
                <fullName>Authorization_Form_Received__c</fullName>
                <label>Authorization Form Received</label>
            </value>
            <value>
                <fullName>Blackout_Notice_to_Client__c</fullName>
                <label>Blackout Notice to Client</label>
            </value>
            <value>
                <fullName>Census_and_Eligibility_Uploaded__c</fullName>
                <label>Census and Eligibility Uploaded</label>
            </value>
            <value>
                <fullName>Census_and_Payroll_Instructions_Sent__c</fullName>
                <label>Census and Payroll Instructions Sent</label>
            </value>
            <value>
                <fullName>Census_Instructions_Sent__c</fullName>
                <label>Census Instructions Sent</label>
            </value>
            <value>
                <fullName>Conversion_Assets_Posted__c</fullName>
                <label>Conversion Assets Posted</label>
            </value>
            <value>
                <fullName>Conversion_Assets_Settled__c</fullName>
                <label>Conversion Assets Settled</label>
            </value>
            <value>
                <fullName>Conversion_Records_Received__c</fullName>
                <label>Conversion Records Received</label>
            </value>
            <value>
                <fullName>Created_Support_Tasks__c</fullName>
                <label>Created Support Tasks</label>
            </value>
            <value>
                <fullName>Custodial_Account_Number_Received__c</fullName>
                <label>Custodial Account Number Received</label>
            </value>
            <value>
                <fullName>Date_Given_To_Third_Party_Integrator__c</fullName>
                <label>Date Given To Third Party Integrator</label>
            </value>
            <value>
                <fullName>Fidelity_Bond_Discussed__c</fullName>
                <label>Fidelity Bond Discussed</label>
            </value>
            <value>
                <fullName>Final_Fees_Paid_Accounting__c</fullName>
                <label>Final Fees Paid (Accounting)</label>
            </value>
            <value>
                <fullName>Final_Handoff_to_CST__c</fullName>
                <label>Final Handoff to CST</label>
            </value>
            <value>
                <fullName>Final_Reporting_Date__c</fullName>
                <label>Final Reporting Date</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>