force-app/main/default/objects/Project_Deliverables__c/fields/First_Response_Time_Hours__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Time_Hours__c</fullName>
    <label>First Response Time Hours</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>