force-app/main/default/objects/Project_Deliverables__c/fields/Non_Linear_Progression_Group__c.field-meta.xml
<CustomField>
    <fullName>Non_Linear_Progression_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Non-Linear Progression Group</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Required_Action__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>0121G000000RlRbQAK</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Required_Action__c</referenceTo>
    <relationshipLabel>Project Deliverables</relationshipLabel>
    <relationshipName>Project_Deliverables</relationshipName>
    <type>Lookup</type>
</CustomField>