force-app/main/default/objects/Project_Deliverables__c/fields/Picklist_Completion_Value__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Completion_Value__c</fullName>
    <label>Picklist Completion Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>