force-app/main/default/objects/Project_Deliverables__c/fields/Picklist_Declined_Value__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Declined_Value__c</fullName>
    <label>Picklist Declined Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>