force-app/main/default/objects/Project_Deliverables__c/fields/Service_Option_s_Ineligible__c.field-meta.xml
<CustomField>
    <fullName>Service_Option_s_Ineligible__c</fullName>
    <label>Service Option(s) Ineligible</label>
    <type>TextArea</type>
</CustomField>