force-app/main/default/objects/Project_Deliverables__c/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <description>How many business days is this task expected to be completed in?</description>
    <inlineHelpText>How many business days is this task expected to be completed in?</inlineHelpText>
    <label>SLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>