force-app/main/default/objects/Project_Deliverables__c/fields/Status_Upon_Creation__c.field-meta.xml
<CustomField>
    <fullName>Status_Upon_Creation__c</fullName>
    <label>Status Upon Creation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Project_Task_Statuses</valueSetName>
    </valueSet>
</CustomField>