force-app/main/default/objects/Project_Deliverables__c/fields/Work_Breakdown_Structure__c.field-meta.xml
<CustomField>
    <fullName>Work_Breakdown_Structure__c</fullName>
    <label>Work Breakdown Structure</label>
    <referenceTo>Work_Breakdown_Structure__c</referenceTo>
    <relationshipLabel>Project Deliverables</relationshipLabel>
    <relationshipName>Project_Deliverables</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>