force-app/main/default/objects/Project_Deliverables__c/recordTypes/Case_Deliverable.recordType-meta.xml
<RecordType>
    <fullName>Case_Deliverable</fullName>
    <active>true</active>
    <label>Case Deliverable</label>
</RecordType>