force-app/main/default/objects/Project_Deliverables__c/recordTypes/Default_Deliverables.recordType-meta.xml
<RecordType>
    <fullName>Default_Deliverables</fullName>
    <active>true</active>
    <label>Default Deliverables</label>
</RecordType>