force-app/main/default/objects/Project_Deliverables__c/recordTypes/Picklist_Deliverable.recordType-meta.xml
<RecordType>
    <fullName>Picklist_Deliverable</fullName>
    <active>true</active>
    <description>Used to surface options to user to determine next step in process.</description>
    <label>Picklist Deliverable</label>
</RecordType>