force-app/main/default/objects/Project_Deliverables__c/recordTypes/Threshold_Deliverable.recordType-meta.xml
<RecordType>
    <fullName>Threshold_Deliverable</fullName>
    <active>true</active>
    <description>Used to evaluate threshold required for next step evaluation</description>
    <label>Threshold Deliverable</label>
</RecordType>