force-app/main/default/objects/Project_Deliverables__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Work_Breakdown_Structure__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>